Modify: replace java inner Base64Encoder, because BASE64Encoder是内部专用 API, 可能会在未来发行版中删除